syntax = "proto3";

package blog;

option go_package = "/gen";

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service BlogAdmin {
  rpc GetArticle(Id) returns (Blog) {};
  rpc CreateArticle(BlogRequest) returns (Blog) {};
  rpc UpdateArticle(BlogRequest) returns (Blog) {};
  rpc DeleteArticle(Id) returns (Response) {};
}

message Id {
  int64 id = 1;
}

message BlogRequest {
  string title = 1;
  string content = 2;
  string author = 3;
  optional string slug = 4;
  repeated string tags = 5;
}

message Blog {
  int64 id = 1;
  string title = 2;
  string content = 3;
  optional string content_html = 4;
  string author = 5;
  optional string slug = 8;
  repeated string tags = 9;
  google.protobuf.Timestamp createTime = 6;
  google.protobuf.Timestamp updateTime = 7;
}

message Response {
  int32 code = 1;
  string msg = 2;
  string error = 3;
}

message BlogResponse {
  Response response = 1;
  Blog blog = 2;
}

enum BlogNature {
  Original = 0;
  Reprinting = 1;
}